
[package]
edition = "2024"
name = "napi_fuser"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.8.2", features = ["tokio_rt", "napi4"] }
napi-derive = "3.5.1"
fuser = "0.16.0"
libc = "0.2.180"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
